--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -161,7 +161,7 @@ body {
     color:white;
     font-size: 1.3rem;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    width: 310px;
+    width: 410px;
 }
 
 
@@ -339,7 +339,7 @@ body {
 }
 
 .About-Me-Links-Wrapper img {
-    width: 45px;
+    width: 70px;
     object-fit: contain;
 }
 
@@ -368,7 +368,7 @@ body {
     width: 100%;
     overflow: hidden;
     background-color:var(--black);
-    height: 610px;
+    height: 645px;
 }
 
 
@@ -437,9 +437,9 @@ body {
 
 
 .image-language img {
-    width: 140px;
+    width: 145px;
     object-fit: contain;
-    margin:0px 30px
+    margin:0px 20px
 }
 
 
@@ -542,6 +542,7 @@ body {
 .Experience-Wrapper img {
     height: 180px;
     object-fit: contain;
+    border: 1px solid var(--black)
 }
 
 
@@ -550,6 +551,13 @@ body {
 .image-three {
     background-color:var(--green);
     height: 410px;
+}
+
+
+.image-one:hover,
+.image-two:hover,
+.image-three:hover {
+    cursor: pointer;
 }
 
 
